[package]
name = "cubemx-db-decoder"
version = "0.1.0"
authors = ["Mattias Grönlund <mattias@gronlund.se>"]
edition = "2018"
description = "A decoder for the STM32CubeMX database"
keywords = ["STM32", "CubeMx", "decpder", "parser"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattiasgronlund/cubemx-db-decoder"
readme = "README.md"

[dependencies]
encoding_rs_io = "0.1.7"
log = "0.4.0"
paste = "1.0"
roxmltree = "0.13"
thiserror = "1.0"

[dev-dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0"
env_logger = "0.7.1"
itertools = "0.9.0"